# rust-rt-playground

./: .gitmodules  Cargo.toml
assets/shaders/: closesthit.rchit  miss.rmiss  raygen.rgen  triangle.frag  triangle.vert
src/: main.rs  shaders.rs
